// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon [mcs-lite-icon] API 1`] = `
<svg
  fill="currentColor"
  height="1em"
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
  />
</svg>
`;

exports[`Storyshots Icon [mcs-lite-icon] MorphReplace 1`] = `
<mock-morph-replace
  height={24}
  width={24}
>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M19.9 13v-2h-12l5.5-5.5L12 4.1 4.1 12l7.9 7.9 1.4-1.4L7.9 13h12z"
    />
  </svg>
</mock-morph-replace>
`;

exports[`Storyshots Icon [mcs-lite-icon] Spin Icon 1`] = `
.c0 {
  box-sizing: border-box;
}

.c0 > * {
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-animation: iVXCSc 0.6s infinite cubic-bezier(0.41,0.01,0.58,1);
  animation: iVXCSc 0.6s infinite cubic-bezier(0.41,0.01,0.58,1);
}

<div
  className="c0"
>
  <svg
    fill="currentColor"
    height={14}
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 24 24"
    width={14}
  >
    <path
      d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
      opacity=".3"
    />
    <path
      d="M12 4c4.4 0 8 3.6 8 8h2c0-5.5-4.5-10-10-10v2z"
    />
  </svg>
</div>
`;
